--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 # 사이트 기능
- - 페트 검색, 속성별 필터링
-    - [엑셀 시트](https://docs.google.com/spreadsheets/d/1k7lcibdGF4LHogpBInIhQBTBZFxgxvsUA1WnizydcEs/edit?usp=sharing)
- - 퀘스트 공략 (공식 홈피와 동일)
- - 계산기 기능들 (스크린샷 저장 가능)
+* 페트 검색, 속성별 필터링
+* [엑셀 시트](https://docs.google.com/spreadsheets/d/1k7lcibdGF4LHogpBInIhQBTBZFxgxvsUA1WnizydcEs/edit?usp=sharing)
+* 퀘스트 공략 (공식 홈피와 동일)
+* 계산기 기능들 (스크린샷 저장 가능)
     - 페트 소숫점 계산기
     - 돈펫 가격 계산기
     - 장비 테스터 (장비 장착 후 탑/노탑 능력치 계산)
